--- a/index.html
+++ b/index.html
@@ -12,6 +12,263 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <header class="header">
+        <div class="logo">
+            <a class="logo" href="#" target="_blank" title=""><img id="logo-img" src="" alt="">Brindusa Melinte</a>
+        </div>
+
+        <nav id="navbar" class="main-nav">
+            <ul id="item-list" class="main-nav__list">
+                <li class="main-nav__item">
+                    <a href="#about" class="main-nav__link">About</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="#resume" class="main-nav__link">Resume</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="#portfolio" class="main-nav__link">Portfolio</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="#contact" class="main-nav__link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div>
+            <button>Download CV<i class="fa-solid fa-download"></i></button>
+            <a href="" download="Brindusa Melinte CV">Download CV<i class="fa-solid fa-download"></i></a>
+        </div>
+    </header>
     
+    <main class="main">
+        <section id="hero">
+            <h2>Hello, I Am</h2>
+            <h1>Brindusa Melinte</h1>
+            <p>A front-end developer</p>
+            <div>
+                <a href="#">Contact Me</a>
+                <a href="#">See My Work</a>
+            </div>
+            <div>
+                <a href="" target="_blank">
+                    <img src="" alt="Brindusa Melinte GitHub">
+                </a>
+                <a href="" target="_blank">
+                    <img src="" alt="Brindusa Melinte LinkedIn">
+                </a>
+            </div>
+        </section>
+
+        <section id="about">
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <article>
+                <h2>About Me</h2>
+                <div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </article>
+        </section>
+
+        <section id="resume">
+            <div>
+                <h2>My Resume</h2>
+                <p></p>
+            </div>
+            <div>
+                <div>
+                    <h3>Education</h3>
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                        <p></p>
+                    </div>
+                </div>
+                <div>
+                    <h3>Employment</h3>
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h3>General Skills</h3>
+                <div>
+                    <h3>What I have learned so far...</h3>
+                    <ul>
+                        <li><img src="" alt=""></li>
+                        <li><img src="" alt=""></li>
+                        <li><img src="" alt=""></li>
+                        <li><img src="" alt=""></li>
+                        <li><img src="" alt=""></li>
+                        <li><img src="" alt=""></li>
+                    </ul>
+                </div>
+                <div>
+                    <label for="">
+                        <span>HTML</span>
+                        <span>80%</span>
+                    </label>
+                    <progress id="" value="80" min="0" max="100">80%</progress>                  
+                </div>
+                <div>
+                    <label for="">
+                        <span>HTML</span>
+                        <span>80%</span>
+                    </label>
+                    <progress id="" value="80" min="0" max="100">80%</progress>   
+                </div>
+                <div>
+                    <label for="">
+                        <span>HTML</span>
+                        <span>80%</span>
+                    </label>
+                    <progress id="" value="80" min="0" max="100">80%</progress>   
+                </div>
+                <div>
+                    <label for="">
+                        <span>HTML</span>
+                        <span>80%</span>
+                    </label>
+                    <progress id="" value="80" min="0" max="100">80%</progress>   
+                </div>
+            </div>
+        </section>
+
+        <section id="portfolio">
+            <h2>Portfolio</h2>
+            <article>
+                <div class="">
+                    <div>
+                        <h3>Project Name</h3>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h3>Technologies Used</h3>
+                        <ul>
+                            <li><img src="" alt=""></li>
+                            <li><img src="" alt=""></li>
+                            <li><img src="" alt=""></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="" target="_blank">See Live</a>
+                        <a href="" target="_blank">Source Code</a>
+                    </div>
+                </div>
+                <div class="">
+                    <a href="" target="_blank"><img src="" alt=""></a>
+                </div>
+            </article>
+            <article>
+                <div class="">
+                    <div>
+                        <h3>Project Name</h3>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h3>Technologies Used</h3>
+                        <ul>
+                            <li><img src="" alt=""></li>
+                            <li><img src="" alt=""></li>
+                            <li><img src="" alt=""></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="" target="_blank">See Live</a>
+                        <a href="" target="_blank">Source Code</a>
+                    </div>
+                </div>
+                <div class="">
+                    <a href="" target="_blank"><img src="" alt=""></a>
+                </div>
+            </article>
+            <article>
+                <div class="">
+                    <div>
+                        <h3>Project Name</h3>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h3>Technologies Used</h3>
+                        <ul>
+                            <li><img src="" alt=""></li>
+                            <li><img src="" alt=""></li>
+                            <li><img src="" alt=""></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="" target="_blank">See Live</a>
+                        <a href="" target="_blank">Source Code</a>
+                    </div>
+                </div>
+                <div class="">
+                    <a href="" target="_blank"><img src="" alt=""></a>
+                </div>
+            </article>
+        </section>
+
+        <section id="contact">
+            <div>
+                <h2>Let's work together...</h2>
+                <p></p>
+            </div>
+            <div>
+                <div>
+                    <div>
+                        <a href=""></a>
+                        <a href=""></a>
+                    </div> 
+                    <ul>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                    </ul>
+                </div>
+                <form>
+
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div></div>
+        <div>Copyright &copy; 2022 | Brindusa Melinte</div>
+    </footer>
+
 </body>
 </html>
