--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
     <meta name="description" content="Professional information about me and showcase of my work.">
     <meta name="author" content="Brindusa Melinte">
     <meta name="keywords" content="HTML, CSS, JavaScript">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Portfolio Projects- Brindusa Melinte</title>
-    <link src="style.css" rel="stylesheet" type="text/css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> 
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+
+    <script src="https://kit.fontawesome.com/669ca33eac.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <a class="logo" href="#" target="_blank" title=""><img id="logo-img" src="" alt="">Brindusa Melinte</a>
+        <div id="logo">
+            <a href="#"><img id="logo-img" src="./images/PersonalPortfolio-Logo4.svg" alt="Brindusa Melinte Logo" width="350" height="75"></a>
         </div>
-
+        <button id="menu-btn" type="button"><i class="fa-solid fa-bars fa-xl"></i></button>
         <nav id="navbar" class="main-nav">
             <ul id="item-list" class="main-nav__list">
                 <li class="main-nav__item">
@@ -33,11 +42,26 @@
                 </li>
             </ul>
         </nav>
-
-        <div>
-            <button>Download CV<i class="fa-solid fa-download"></i></button>
-            <a href="" download="Brindusa Melinte CV">Download CV<i class="fa-solid fa-download"></i></a>
+        <div id="cv-btn">
+            <a href="./CV/CV.odt" download="Brindusa Melinte CV"><strong>Download <span>CV</span></strong><i class="fa-solid fa-download"></i></a>
         </div>
+        <button id="close-menu-btn" type="button"><i class="fa-solid fa-xmark fa-2xl"></i></i></button>
+        <nav id="mobile-navbar" class="mobile-nav">
+            <ul id="mobile-item-list" class="mobile-nav__list">
+                <li class="mobile-nav__item">
+                    <a href="#about" class="mobile-nav__link">About</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a href="#resume" class="mobile-nav__link">Resume</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a href="#portfolio" class="mobile-nav__link">Portfolio</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a href="#contact" class="mobile-nav__link">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     
     <main class="main">
@@ -46,15 +70,17 @@
             <h1>Brindusa Melinte</h1>
             <p>A front-end developer</p>
             <div>
-                <a href="#">Contact Me</a>
-                <a href="#">See My Work</a>
+                <a href="#contact">Contact Me</a>
+                <a href="#portfolio">See My Work</a>
             </div>
             <div>
                 <a href="" target="_blank">
-                    <img src="" alt="Brindusa Melinte GitHub">
+                    <img src="./images/github-square-brands.svg" alt="Brindusa Melinte GitHub" width="35px" height="35px" style="filter: invert(32%) sepia(8%) saturate(5060%) hue-rotate(176deg) brightness(93%) contrast(87%);" >
+                    <i class="fa-brands fa-github-square fa-xl" style="color:red;"></i>
                 </a>
                 <a href="" target="_blank">
-                    <img src="" alt="Brindusa Melinte LinkedIn">
+                    <img src="./images/linkedin-brands.svg" alt="Brindusa Melinte LinkedIn" width="35px" height="35px">
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
             </div>
         </section>
@@ -66,17 +92,15 @@
             <article>
                 <h2>About Me</h2>
                 <div>
-                    <p></p>
-                    <p></p>
+                    <p>Lorem ipsum dolor sit amet, communication adipisicing elit, helpful eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <p>Lorem ipsum dolor sit amet, communication adipisicing elit, helpful eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud sence of humour ullamco laboris nisi ut honest ea commodo consequat.  </p>
                 </div>
                 <div>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><strong>Freelance:</strong></li>
+                        <li><strong>Address:</strong></li>
+                        <li><strong>Phone:</strong></li>
+                        <li><strong>E-mail:</strong></li>
                     </ul>
                 </div>
             </article>
@@ -85,43 +109,43 @@
         <section id="resume">
             <div>
                 <h2>My Resume</h2>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet, communication adipisicing elit, helpful eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud sence of humour ullamco laboris nisi ut honest ea commodo consequat. Duis aute irure dolor in upper-intermediate english level velit dolore eu ivivdtevoluptatem ontend developer. </p>
             </div>
             <div>
                 <div>
                     <h3>Education</h3>
                     <div>
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
+                        <h3>Lorem Ipsum School</h3>
+                        <p>2006 - 2010</p>
+                        <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                     </div>
                     <div>
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
+                        <h3>Lorem Ipsum School</h3>
+                        <p>2006 - 2010</p>
+                        <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                     </div>
                     <div>
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
+                        <h3>Lorem Ipsum School</h3>
+                        <p>2006 - 2010</p>
+                        <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                     </div>
                 </div>
                 <div>
                     <h3>Employment</h3>
                     <div>
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
+                        <h3>Lorem Ipsum</h3>
+                        <p>2006 - 2010</p>
+                        <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                     </div>
                     <div>
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
+                        <h3>Lorem Ipsum</h3>
+                        <p>2006 - 2010</p>
+                        <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                     </div>
                     <div>
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
+                        <h3>Lorem Ipsum</h3>
+                        <p>2006 - 2010</p>
+                        <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
@@ -130,12 +154,13 @@
                 <div>
                     <h3>What I have learned so far...</h3>
                     <ul>
-                        <li><img src="" alt=""></li>
-                        <li><img src="" alt=""></li>
-                        <li><img src="" alt=""></li>
-                        <li><img src="" alt=""></li>
-                        <li><img src="" alt=""></li>
-                        <li><img src="" alt=""></li>
+                        <li><img src="./images/code-solid.svg" alt="HTML" width="35px" height="35px"></li>
+                        <li><img src="./images/css3-alt-brands.svg" alt="CSS" width="35px" height="35px"></li>
+                        <li><img src="./images/bootstrap-brands.svg" alt="Bootstrap" width="35px" height="35px"></li>
+                        <li><img src="./images/js-square-brands.svg" alt="JavaScript" width="35px" height="35px"></li>
+                        <li><img src="./images/react-brands.svg" alt="React" width="35px" height="35px"></li>
+                        <li><img src="./images/php-brands.svg" alt="PHP" width="35px" height="35px"></li>
+                        <li><img src="./images/wordpress-brands.svg" alt="Wordpress" width="35px" height="35px"></li>
                     </ul>
                 </div>
                 <div>
@@ -175,14 +200,14 @@
                 <div class="">
                     <div>
                         <h3>Project Name</h3>
-                        <p></p>
+                        <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                     </div>
                     <div>
                         <h3>Technologies Used</h3>
                         <ul>
-                            <li><img src="" alt=""></li>
-                            <li><img src="" alt=""></li>
-                            <li><img src="" alt=""></li>
+                            <li><img src="./images/code-solid.svg" alt="HTML" width="35px" height="35px"></li>
+                            <li><img src="./images/css3-alt-brands.svg" alt="CSS" width="35px" height="35px"></li>
+                            <li><img src="./images/bootstrap-brands.svg" alt="Bootstrap" width="35px" height="35px"></li>
                         </ul>
                     </div>
                     <div>
@@ -198,14 +223,14 @@
                 <div class="">
                     <div>
                         <h3>Project Name</h3>
-                        <p></p>
+                        <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                     </div>
                     <div>
                         <h3>Technologies Used</h3>
                         <ul>
-                            <li><img src="" alt=""></li>
-                            <li><img src="" alt=""></li>
-                            <li><img src="" alt=""></li>
+                            <li><img src="./images/code-solid.svg" alt="HTML" width="35px" height="35px"></li>
+                            <li><img src="./images/css3-alt-brands.svg" alt="CSS" width="35px" height="35px"></li>
+                            <li><img src="./images/bootstrap-brands.svg" alt="Bootstrap" width="35px" height="35px"></li>
                         </ul>
                     </div>
                     <div>
@@ -221,14 +246,14 @@
                 <div class="">
                     <div>
                         <h3>Project Name</h3>
-                        <p></p>
+                        <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                     </div>
                     <div>
                         <h3>Technologies Used</h3>
                         <ul>
-                            <li><img src="" alt=""></li>
-                            <li><img src="" alt=""></li>
-                            <li><img src="" alt=""></li>
+                            <li><img src="./images/code-solid.svg" alt="HTML" width="35px" height="35px"></li>
+                            <li><img src="./images/css3-alt-brands.svg" alt="CSS" width="35px" height="35px"></li>
+                            <li><img src="./images/bootstrap-brands.svg" alt="Bootstrap" width="35px" height="35px"></li>
                         </ul>
                     </div>
                     <div>
@@ -245,21 +270,33 @@
         <section id="contact">
             <div>
                 <h2>Let's work together...</h2>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
             </div>
             <div>
                 <div>
                     <div>
-                        <a href=""></a>
-                        <a href=""></a>
+                        <a href="tel:+40722432384">Phone: +40722432384</a>
+                        <a href="mailto:brindusa.melinte@gmail.com">Email: brindusa.melinte@gmail.com</a>
                     </div> 
                     <ul>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="#">GitHub</a></li>
+                        <li><a href="#">LinkedIn</a></li>
                     </ul>
                 </div>
-                <form>
-
+                <form action="#">
+                    <div>
+                        <label for="">Full Name<span>*</span>:</label>
+                        <input id="" type="text" name="fullname" placeholder="Albert Morphy">
+                    </div>
+                    <div>
+                        <label for="">Email Address<span>*</span>:</label>
+                        <input id="" type="email" name="email" placeholder="albert.morphy@gmail.com"> 
+                    </div>
+                    <div>
+                        <label for="">Message<span>*</span></label>
+                        <textarea id="" name="massage" placeholder="Your message here..."></textarea>
+                    </div>
+                    <button type="submit">Send</button>
                 </form>
             </div>
         </section>
