Dark Mode functionality added

--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
                 </li>
             </ul>
         </nav>
-        <div id="cv-btn" class="cv-btn">
-            <a class="cv-btn__link" href="./CV/CV.odt" download="Brindusa Melinte CV"><strong>Download <span class="cv-btn__span">CV</span></strong><i class="fa-solid fa-download"></i></a>
+        <div class="btns-wrapper">
+            <div class="switch-mode">
+                <button class="switch-mode__btn switch-mode__btn--light" type="button"><i class="fa-solid fa-sun fa-lg"></i></button>
+                <button class="switch-mode__btn switch-mode__btn--dark" type="button"><i class="fa-solid fa-moon fa-lg"></i></button>
+            </div>
+            <div id="cv-btn" class="cv-btn">
+                <a class="cv-btn__link" href="./CV/CV.odt" download="Brindusa Melinte CV"><strong>Download <span class="cv-btn__span">CV</span></strong><i class="fa-solid fa-download"></i></a>
+            </div>
         </div>
         <button id="close-menu-btn" class="menu-btn menu-btn__close" type="button"><i class="fa-solid fa-xmark fa-2xl"></i></i></button>
         <nav id="mobile-navbar" class="mobile-nav">
@@ -190,7 +196,7 @@
                     </div>
                 </section>
                 <section class="portfolio-card__img-section">
-                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/MyPic.jpeg" alt=""></a>
+                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/default-image.png" alt=""></a>
                 </section>
             </article>
             <article class="portfolio-card">
@@ -213,7 +219,7 @@
                     </div>
                 </section>
                 <section class="portfolio-card__img-section">
-                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/MyPic.jpeg" alt=""></a>
+                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/default-image.svg" alt=""></a>
                 </section>
             </article>
             <article class="portfolio-card">
@@ -236,7 +242,7 @@
                     </div>
                 </section>
                 <section class="portfolio-card__img-section">
-                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/MyPic.jpeg" alt=""></a>
+                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/default-image.svg" alt=""></a>
                 </section>
             </article>
             <article class="portfolio-card">
@@ -259,7 +265,7 @@
                     </div>
                 </section>
                 <section class="portfolio-card__img-section">
-                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/MyPic.jpeg" alt=""></a>
+                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/default-image.svg" alt=""></a>
                 </section>
             </article>
             <article class="portfolio-card">
@@ -282,7 +288,7 @@
                     </div>
                 </section>
                 <section class="portfolio-card__img-section">
-                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/MyPic.jpeg" alt=""></a>
+                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/default-image.svg" alt=""></a>
                 </section>
             </article>
             <article class="portfolio-card">
@@ -305,7 +311,7 @@
                     </div>
                 </section>
                 <section class="portfolio-card__img-section">
-                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/MyPic.jpeg" alt=""></a>
+                    <a href="#" target="_blank"><img class="portfolio-card__project-img" src="./images/default-image.svg" alt=""></a>
                 </section>
             </article>
         </section>
