Test sending email using MailHog

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -336,6 +336,9 @@
                         </a>
                     </div>
                 </div>
+                <div class="contact-details__submit-message">
+                    <p id="submit-message"></p>
+                </div>
                 <form class="contact-details__form" name="contactForm" action="http://localhost:3000/contact" method="POST" accept-charset="utf-8">
                     <div class="input-group">
                         <label class="input-group__label" for="name">Full Name<span>*</span></label>
